--- a/publish_baemin/package.json
+++ b/publish_baemin/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive": "9.0.0-beta.6",
     "react-scripts": "5.0.0",
+    "recoil": "0.6.1",
     "styled-components": "5.3.3",
     "styled-reset": "4.3.4",
     "typescript": "4.5.5",
